feat(style): add spacing rem semantics variables

--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -135,6 +135,32 @@ $spacing_44: 88px !default;
 $spacing_48: 96px !default;
 $spacing_56: 112px !default;
 
+$spacing_r00: 0rem !default;
+$spacing_r01: 0.125rem !default;
+$spacing_r02: 0.25rem !default;
+$spacing_r03: 0.375rem !default;
+$spacing_r04: 0.5rem !default;
+$spacing_r06: 0.75rem !default;
+$spacing_r08: 1rem !default;
+$spacing_r10: 1.25rem !default;
+$spacing_r12: 1.5rem !default;
+$spacing_r14: 1.75rem !default;
+$spacing_r16: 2rem !default;
+$spacing_r18: 2.25rem !default;
+$spacing_r20: 2.5rem !default;
+$spacing_r22: 2.75rem !default;
+$spacing_r24: 3rem !default;
+$spacing_r26: 3.25rem !default;
+$spacing_r28: 3.5rem !default;
+$spacing_r30: 3.75rem !default;
+$spacing_r32: 4rem !default;
+$spacing_r34: 4.25rem !default;
+$spacing_r36: 4.5rem !default;
+$spacing_r40: 5rem !default;
+$spacing_r44: 5.5rem !default;
+$spacing_r48: 6rem !default;
+$spacing_r56: 7rem !default;
+
 // Size
 $size_00: 0px !default;
 $size_04: 8px !default;
