--- a/less/variables.less
+++ b/less/variables.less
@@ -135,6 +135,32 @@
 @spacing_48: 96px;
 @spacing_56: 112px;
 
+@spacing_r00: 0rem;
+@spacing_r01: 0.125rem;
+@spacing_r02: 0.25rem;
+@spacing_r03: 0.375rem;
+@spacing_r04: 0.5rem;
+@spacing_r06: 0.75rem;
+@spacing_r08: 1rem;
+@spacing_r10: 1.25rem;
+@spacing_r12: 1.5rem;
+@spacing_r14: 1.75rem;
+@spacing_r16: 2rem;
+@spacing_r18: 2.25rem;
+@spacing_r20: 2.5rem;
+@spacing_r22: 2.75rem;
+@spacing_r24: 3rem;
+@spacing_r26: 3.25rem;
+@spacing_r28: 3.5rem;
+@spacing_r30: 3.75rem;
+@spacing_r32: 4rem;
+@spacing_r34: 4.25rem;
+@spacing_r36: 4.5rem;
+@spacing_r40: 5rem;
+@spacing_r44: 5.5rem;
+@spacing_r48: 6rem;
+@spacing_r56: 7rem;
+
 // Size
 @size_00: 0px;
 @size_04: 8px;
