fix: Tabs hover css

--- a/src/components/Tabs/Tabs.scss
+++ b/src/components/Tabs/Tabs.scss
@@ -110,7 +110,7 @@ $scroll-button-tail-width: 16px;
   z-index: 1;
 
   &-wrapper {
-    @apply relative;
+    @apply cursor-pointer relative;
   }
 
   &:hover {
