--- a/src/components/Dropdown/Dropdown.scss
+++ b/src/components/Dropdown/Dropdown.scss
@@ -39,6 +39,10 @@ $menu-h-lg: 40px;
 }
 
 .#{$component} {
+  position: relative;
+}
+
+.#{$component}-list {
   @apply mt-spacing_01 p-spacing_02 bg-color_layout_01 border border-solid border-color_layout_04 shadow-shadow_v2;
 
   position: absolute;
