style(dropdown): change inline to inline-flex in menu icon

--- a/src/components/Dropdown/Dropdown.scss
+++ b/src/components/Dropdown/Dropdown.scss
@@ -70,7 +70,7 @@ $menu-h-lg: 40px;
 // icon 옵션이 추가될 때 Dropdown
 .#{$component}-icon-list {
   .#{$component}-menu-icon {
-    display: inline;
+    display: inline-flex;
   }
 
   &.#{$component}-md .#{$component}-menu-desc {
