--- a/src/components/Dropdown/Dropdown.scss
+++ b/src/components/Dropdown/Dropdown.scss
@@ -39,6 +39,10 @@ $menu-h-lg: 40px;
 }
 
 .#{$component} {
+  position: relative;
+}
+
+.#{$component}-list {
   @apply mt-spacing_01 p-spacing_02 bg-color_layout_01 border border-solid border-color_layout_04 shadow-shadow_v2;
 
   position: absolute;
@@ -66,7 +70,7 @@ $menu-h-lg: 40px;
 // icon 옵션이 추가될 때 Dropdown
 .#{$component}-icon-list {
   .#{$component}-menu-icon {
-    display: inline;
+    display: inline-flex;
   }
 
   &.#{$component}-md .#{$component}-menu-desc {
@@ -100,7 +104,7 @@ $menu-h-lg: 40px;
   display: flex;
   align-items: center;
 
-  .#{$component}-menu-name {
+  .#{$component}-menu-label {
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
