--- a/src/components/Dropdown/Dropdown.scss
+++ b/src/components/Dropdown/Dropdown.scss
@@ -45,21 +45,16 @@ $menu-h-lg: 40px;
 .#{$component}-list {
   @apply mt-spacing_01 p-spacing_02 bg-color_layout_01 border border-solid border-color_layout_04 shadow-shadow_v2;
 
+  display: none;
   position: absolute;
   overflow: scroll;
 
   &::-webkit-scrollbar {
     display: none;
   }
-  &.#{$component}-left {
-    left: 0;
-  }
-  &.#{$component}-center {
-    left: 50%;
-    transform: translate(-50%, 0);
-  }
-  &.#{$component}-right {
-    right: 0;
+
+  &.#{$component}-open {
+    display: block;
   }
 
   .#{$component}-menu-icon {
