improvement: tooltip render style

--- a/src/components/Tooltip/Tooltip.scss
+++ b/src/components/Tooltip/Tooltip.scss
@@ -4,6 +4,7 @@ $component: #{$prefix}-tooltip;
 $tooltip-height: 24px;
 $tooltip-margin: 4px;
 $caret-side-width: 4px;
+$caret-border-width: 1px;
 $caret-radius: 3px;
 $tooltip-z-index: 5000;
 
@@ -22,117 +23,18 @@ $tooltip-z-index: 5000;
   white-space: nowrap;
 }
 
-// content with caret
-.#{$component}-caret {
-  .#{$component}-top.#{$component}-content {
-    transform: translate(
-      -50%,
-      calc(-100% - #{$tooltip-margin} - #{$caret-side-width})
-    );
-  }
-  .#{$component}-top-left.#{$component}-content {
-    transform: translate(
-      0,
-      calc(-100% - #{$tooltip-margin} - #{$caret-side-width})
-    );
-  }
-  .#{$component}-top-right.#{$component}-content {
-    transform: translate(
-      0,
-      calc(-100% - #{$tooltip-margin} - #{$caret-side-width})
-    );
-  }
-  .#{$component}-bottom.#{$component}-content {
-    transform: translate(
-      -50%,
-      calc(100% + #{$tooltip-margin} + #{$caret-side-width})
-    );
-  }
-  .#{$component}-bottom-left.#{$component}-content {
-    transform: translate(
-      0,
-      calc(100% + #{$tooltip-margin} + #{$caret-side-width})
-    );
-  }
-  .#{$component}-bottom-right.#{$component}-content {
-    transform: translate(
-      0,
-      calc(100% + #{$tooltip-margin} + #{$caret-side-width})
-    );
-  }
-  .#{$component}-left.#{$component}-content {
-    transform: translate(
-      calc(-100% - #{$tooltip-margin} - #{$caret-side-width}),
-      50%
-    );
-  }
-  .#{$component}-right.#{$component}-content {
-    transform: translate(
-      calc(100% + #{$tooltip-margin} + #{$caret-side-width}),
-      50%
-    );
-  }
-}
-
-// content without caret
-.#{$component}-top .#{$component}-content {
-  top: 0;
-  left: 50%;
-  transform: translate(-50%, calc(-100% - #{$tooltip-margin}));
-}
-
-.#{$component}-top-left .#{$component}-content {
-  top: 0;
-  left: 0;
-  transform: translate(0, calc(-100% - #{$tooltip-margin}));
-}
-
-.#{$component}-top-right .#{$component}-content {
-  top: 0;
-  right: 0;
-  transform: translate(0, calc(-100% - #{$tooltip-margin}));
-}
-
-// bottom
-.#{$component}-bottom .#{$component}-content {
-  left: 50%;
-  bottom: 0;
-  transform: translate(-50%, calc(100% + #{$tooltip-margin}));
-}
-
-.#{$component}-bottom-left .#{$component}-content {
-  left: 0;
-  bottom: 0;
-  transform: translate(0, calc(100% + #{$tooltip-margin}));
-}
-
-.#{$component}-bottom-right .#{$component}-content {
-  right: 0;
-  bottom: 0;
-  transform: translate(0, calc(100% + #{$tooltip-margin}));
-}
-
-// left
-.#{$component}-left .#{$component}-content {
-  left: 0;
-  bottom: 50%;
-  transform: translate(calc(-100% - #{$tooltip-margin}), 50%);
-}
-
-// right
-.#{$component}-right .#{$component}-content {
-  right: 0;
-  bottom: 50%;
-  transform: translate(calc(100% + #{$tooltip-margin}), 50%);
+// variant white override
+.#{$component}-content-white {
+  @apply bg-color_background text-color_text_02 border border-solid border-color_layout_emphasize_01;
 }
 
 // caret
-.#{$component}-caret:hover:before,
+.#{$component}-caret:hover::before,
 .#{$component}-caret:focus-within:before {
   @apply absolute bg-color_layout_emphasize_01 border-color_layout_emphasize_01 border-solid;
   content: '';
-  width: 1px;
-  height: 1px;
+  width: 4px;
+  height: 4px;
   border-width: #{$caret-side-width};
   z-index: #{$tooltip-z-index};
   border-top-right-radius: #{$caret-radius};
@@ -148,16 +50,16 @@ $tooltip-z-index: 5000;
 .#{$component}-top.#{$component}-caret::before {
   left: 50%;
 }
-.#{$component}-top-left.#{$component}-caret::before {
+.#{$component}-top-right.#{$component}-caret::before {
   left: calc(#{$caret-radius + ($caret-side-width * 2)});
 }
-.#{$component}-top-right.#{$component}-caret::before {
+.#{$component}-top-left.#{$component}-caret::before {
   right: #{$caret-radius};
 }
 
 .#{$component}-bottom.#{$component}-caret::before,
-.#{$component}-bottom-left.#{$component}-caret::before,
-.#{$component}-bottom-right.#{$component}-caret::before {
+.#{$component}-bottom-right.#{$component}-caret::before,
+.#{$component}-bottom-left.#{$component}-caret::before {
   bottom: 0;
   transform: translate(
       -50%,
@@ -168,10 +70,10 @@ $tooltip-z-index: 5000;
 .#{$component}-bottom.#{$component}-caret::before {
   left: 50%;
 }
-.#{$component}-bottom-left.#{$component}-caret::before {
+.#{$component}-bottom-right.#{$component}-caret::before {
   left: calc(#{$caret-radius + ($caret-side-width * 2)});
 }
-.#{$component}-bottom-right.#{$component}-caret::before {
+.#{$component}-bottom-left.#{$component}-caret::before {
   right: #{$caret-radius};
 }
 
