feat: md and scss/less file

--- a/less/variables.less
+++ b/less/variables.less
@@ -107,6 +107,101 @@
 @color_field_01: @lw_white;
 @color_field_disabled: @lw_grey20;
 
+// Chart
+@lw_sea10: #f2f6fd;
+@lw_sea50: #e0eafa;
+@lw_sea100: #c6d7f6;
+@lw_sea200: #a5c0ee;
+@lw_sea300: #7da4e8;
+@lw_sea400: #5a88d8;
+@lw_sea500: #366cc9;
+@lw_sea600: #27519b;
+@lw_sea700: #1a3970;
+@lw_sea800: #0f2242;
+@lw_teal10: #edf7f8;
+@lw_teal50: #dceeef;
+@lw_teal100: #b9dedf;
+@lw_teal200: #92ccce;
+@lw_teal300: #62b4b7;
+@lw_teal400: #429b9e;
+@lw_teal500: #297c7f;
+@lw_teal600: #176063;
+@lw_teal700: #0f4143;
+@lw_teal800: #08292b;
+@lw_moss10: #edf8ef;
+@lw_moss50: #dbf0de;
+@lw_moss100: #bbe2c2;
+@lw_moss200: #99d1a3;
+@lw_moss300: #6cbc79;
+@lw_moss400: #44ab56;
+@lw_moss500: #298939;
+@lw_moss600: #1b6928;
+@lw_moss700: #114d1b;
+@lw_moss800: #092f10;
+@lw_rose10: #fcf3f3;
+@lw_rose50: #f9e3e1;
+@lw_rose100: #f5c4c2;
+@lw_rose200: #f3a4a0;
+@lw_rose300: #ee807c;
+@lw_rose400: #e15d56;
+@lw_rose500: #c53b34;
+@lw_rose600: #992f29;
+@lw_rose700: #6c221e;
+@lw_rose800: #401412;
+@lw_gold10: #fef5e7;
+@lw_gold50: #fce8ca;
+@lw_gold100: #f9ce90;
+@lw_gold200: #f5b55c;
+@lw_gold300: #f09814;
+@lw_gold400: #c07a11;
+@lw_gold500: #9c6511;
+@lw_gold600: #764d0f;
+@lw_gold700: #56380b;
+@lw_gold800: #312007;
+@lw_butter10: #fef7d7;
+@lw_butter50: #fbeb98;
+@lw_butter100: #f8dd5d;
+@lw_butter200: #f5d019;
+@lw_butter300: #d7b509;
+@lw_butter400: #af9308;
+@lw_butter500: #867109;
+@lw_butter600: #605106;
+@lw_butter700: #453a03;
+@lw_butter800: #2c2502;
+@lw_berry10: #f9f4fb;
+@lw_berry50: #f3e3f7;
+@lw_berry100: #e8ccef;
+@lw_berry200: #d7aae4;
+@lw_berry300: #c484d7;
+@lw_berry400: #ad64c3;
+@lw_berry500: #9043a8;
+@lw_berry600: #702d85;
+@lw_berry700: #50205f;
+@lw_berry800: #2d1335;
+@lw_tulip10: #faf0f3;
+@lw_tulip50: #f5dbe3;
+@lw_tulip100: #f0c2d0;
+@lw_tulip200: #e99fb6;
+@lw_tulip300: #df7796;
+@lw_tulip400: #cc5b7d;
+@lw_tulip500: #b23e61;
+@lw_tulip600: #892d48;
+@lw_tulip700: #601f33;
+@lw_tulip800: #3f1320;
+@lw_bluegrey10: #f3f4f6;
+@lw_bluegrey50: #e7e8ef;
+@lw_bluegrey100: #d3d6de;
+@lw_bluegrey200: #bac0cc;
+@lw_bluegrey300: #9ea2ad;
+@lw_bluegrey400: #858994;
+@lw_bluegrey500: #676b74;
+@lw_bluegrey600: #4e515a;
+@lw_bluegrey700: #363840;
+@lw_bluegrey800: #1e2024;
+@lw_red_hover: rgba(255, 41, 10, 0.08);
+@lw_grey_hover: rgba(41, 46, 51, 0.06);
+@lw_highlight_hover: rgba(255, 240, 0, 0.14);
+
 // Space
 
 @spacing_00: 0px;
