--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -107,6 +107,101 @@ $color_button_danger: $lw_red50 !default;
 $color_field_01: $lw_white !default;
 $color_field_disabled: $lw_grey20 !default;
 
+// Chart
+$lw_sea10: #f2f6fd !default;
+$lw_sea50: #e0eafa !default;
+$lw_sea100: #c6d7f6 !default;
+$lw_sea200: #a5c0ee !default;
+$lw_sea300: #7da4e8 !default;
+$lw_sea400: #5a88d8 !default;
+$lw_sea500: #366cc9 !default;
+$lw_sea600: #27519b !default;
+$lw_sea700: #1a3970 !default;
+$lw_sea800: #0f2242 !default;
+$lw_teal10: #edf7f8 !default;
+$lw_teal50: #dceeef !default;
+$lw_teal100: #b9dedf !default;
+$lw_teal200: #92ccce !default;
+$lw_teal300: #62b4b7 !default;
+$lw_teal400: #429b9e !default;
+$lw_teal500: #297c7f !default;
+$lw_teal600: #176063 !default;
+$lw_teal700: #0f4143 !default;
+$lw_teal800: #08292b !default;
+$lw_moss10: #edf8ef !default;
+$lw_moss50: #dbf0de !default;
+$lw_moss100: #bbe2c2 !default;
+$lw_moss200: #99d1a3 !default;
+$lw_moss300: #6cbc79 !default;
+$lw_moss400: #44ab56 !default;
+$lw_moss500: #298939 !default;
+$lw_moss600: #1b6928 !default;
+$lw_moss700: #114d1b !default;
+$lw_moss800: #092f10 !default;
+$lw_rose10: #fcf3f3 !default;
+$lw_rose50: #f9e3e1 !default;
+$lw_rose100: #f5c4c2 !default;
+$lw_rose200: #f3a4a0 !default;
+$lw_rose300: #ee807c !default;
+$lw_rose400: #e15d56 !default;
+$lw_rose500: #c53b34 !default;
+$lw_rose600: #992f29 !default;
+$lw_rose700: #6c221e !default;
+$lw_rose800: #401412 !default;
+$lw_gold10: #fef5e7 !default;
+$lw_gold50: #fce8ca !default;
+$lw_gold100: #f9ce90 !default;
+$lw_gold200: #f5b55c !default;
+$lw_gold300: #f09814 !default;
+$lw_gold400: #c07a11 !default;
+$lw_gold500: #9c6511 !default;
+$lw_gold600: #764d0f !default;
+$lw_gold700: #56380b !default;
+$lw_gold800: #312007 !default;
+$lw_butter10: #fef7d7 !default;
+$lw_butter50: #fbeb98 !default;
+$lw_butter100: #f8dd5d !default;
+$lw_butter200: #f5d019 !default;
+$lw_butter300: #d7b509 !default;
+$lw_butter400: #af9308 !default;
+$lw_butter500: #867109 !default;
+$lw_butter600: #605106 !default;
+$lw_butter700: #453a03 !default;
+$lw_butter800: #2c2502 !default;
+$lw_berry10: #f9f4fb !default;
+$lw_berry50: #f3e3f7 !default;
+$lw_berry100: #e8ccef !default;
+$lw_berry200: #d7aae4 !default;
+$lw_berry300: #c484d7 !default;
+$lw_berry400: #ad64c3 !default;
+$lw_berry500: #9043a8 !default;
+$lw_berry600: #702d85 !default;
+$lw_berry700: #50205f !default;
+$lw_berry800: #2d1335 !default;
+$lw_tulip10: #faf0f3 !default;
+$lw_tulip50: #f5dbe3 !default;
+$lw_tulip100: #f0c2d0 !default;
+$lw_tulip200: #e99fb6 !default;
+$lw_tulip300: #df7796 !default;
+$lw_tulip400: #cc5b7d !default;
+$lw_tulip500: #b23e61 !default;
+$lw_tulip600: #892d48 !default;
+$lw_tulip700: #601f33 !default;
+$lw_tulip800: #3f1320 !default;
+$lw_bluegrey10: #f3f4f6 !default;
+$lw_bluegrey50: #e7e8ef !default;
+$lw_bluegrey100: #d3d6de !default;
+$lw_bluegrey200: #bac0cc !default;
+$lw_bluegrey300: #9ea2ad !default;
+$lw_bluegrey400: #858994 !default;
+$lw_bluegrey500: #676b74 !default;
+$lw_bluegrey600: #4e515a !default;
+$lw_bluegrey700: #363840 !default;
+$lw_bluegrey800: #1e2024 !default;
+$lw_red_hover: rgba(255, 41, 10, 0.08) !default;
+$lw_grey_hover: rgba(41, 46, 51, 0.06) !default;
+$lw_highlight_hover: rgba(255, 240, 0, 0.14) !default;
+
 // Space
 
 $spacing_00: 0px !default;
