improvement: props default open

--- a/src/components/Tooltip/NewTooltip.scss
+++ b/src/components/Tooltip/NewTooltip.scss
@@ -21,6 +21,8 @@ $tooltip-z-index: 9000;
   border-radius: 4px;
   font-size: 13px;
   font-weight: 500 !important;
+  letter-spacing: -0.3px;
+  line-height: 19px;
 }
 
 // caret
