--- a/less/variables.less
+++ b/less/variables.less
@@ -28,6 +28,8 @@
 @lw_green50: #0cb639;
 @lw_green60: #087d27;
 @lw_green90: #013c12;
+@lw_yellow50: #f5d019;
+@lw_yellow70: #867109;
 @lw_highlight: rgba(255, 240, 0, 0.24);
 @lw_dimmed_overlay: rgba(36, 41, 45, 0.34);
 @lw_active_overlay: rgba(36, 41, 45, 0.12);
@@ -52,6 +54,7 @@
 @color_layout_emphasize_03: @lw_grey90;
 
 @color_danger: @lw_red50;
+@color_caution: @lw_yellow50;
 @color_safe: @lw_green50;
 
 @color_hover_primary: @lw_hover_overlay;
@@ -82,10 +85,12 @@
 @color_text_04: @lw_grey70;
 @color_text_05: @lw_grey60;
 @color_text_error: @lw_red60;
-@color_text_safe: @lw_green60;
+@color_text_safe: @lw_green60; // deprecate
+@color_text_success: @lw_green60;
 @color_text_info: @lw_blue60;
 @color_text_accent: @lw_blue50;
 @color_text_danger: @lw_red50;
+@color_text_warning: @lw_yellow70;
 @color_text_inverse: @lw_white;
 @color_text_disabled: @lw_grey50;
 
@@ -93,12 +98,19 @@
 @color_icon_02: @lw_grey90;
 @color_icon_03: @lw_grey80;
 @color_icon_04: @lw_grey70;
+@color_icon_05: @lw_grey60;
 @color_icon_danger: @lw_red50;
 @color_icon_safe: @lw_green50;
 @color_icon_accent: @lw_blue50;
 @color_icon_inverse_01: @lw_white;
 @color_icon_inverse_02: @lw_grey40;
 @color_icon_disabled: @lw_grey50;
+@color_icon_info: @lw_blue60;
+@color_icon_caution: @lw_yellow50;
+@color_icon_warning: @lw_yellow70;
+@color_icon_error: @lw_red60;
+@color_icon_success: @lw_green60;
+@color_icon_disabled_accent: @lw_blue30;
 
 @color_button_primary: @lw_blue50;
 @color_button_secondary: @lw_grey30;
